--- a/style.css
+++ b/style.css
@@ -67,14 +67,7 @@ a{
     border-radius: 12%;
     overflow: hidden;
     display: block;
-}
-
-.images 
-{
-   /* width: 1px;
-   height: 1px;
-    margin-left: auto;
-    margin-right: auto; */
+    margin-top: 50px;
 }
 
 .card:hover
@@ -95,6 +88,7 @@ span
     display:flex;
     justify-content:space-around;
     flex-wrap: wrap;
+    margin-bottom: 20px;
 }
 
 
@@ -104,9 +98,9 @@ a:hover
 }
 
 
-@media (max-width:499px)
+@media (max-width:600px)
 {
-     #nav1
+    #nav1
     {
         
         display: flex;
@@ -121,9 +115,5 @@ a:hover
     {
         margin-left: auto;
         margin-right: auto;
-    }
-    li 
-    {
-        
     }
 }
